Update 11.3. Thymeleaf prototype-only comment blocks.md

--- a/I. Using Thymeleaf/11.3. Thymeleaf prototype-only comment blocks.md
+++ b/I. Using Thymeleaf/11.3. Thymeleaf prototype-only comment blocks.md
@@ -1,6 +1,6 @@
 ### 11.3. Thymeleaf原型注释块
 
-Thymeleaf允许定义特殊的评论块：当模版被静态地打开（比如，原型）时，它是评论，但是当Thymeleaf执行时，则是普通的标记。
+Thymeleaf允许定义特殊的注释块：当模版被静态地打开（比如，原型）时，它是注释，但是当Thymeleaf执行时，则是普通的标记。
 ```html
 <span>hello!</span>
 <!--/*/
@@ -20,4 +20,4 @@ Thymeleaf的解析系统将简单地移除`<!--/*/`和`/*/-->`标记，但不移
  
 <span>goodbye!</span>
 ```
-与解析器级别评论块一样，这个特性不依赖方言。
+与解析器级别注释块一样，这个特性不依赖方言。
