Update 11.4. Synthetic th：block tag.md

--- a/I. Using Thymeleaf/11.4. Synthetic th：block tag.md
+++ b/I. Using Thymeleaf/11.4. Synthetic th：block tag.md
@@ -18,7 +18,7 @@
   </th:block>
 </table>
 ```
-当结合原型评论块时，特别有用：
+当结合原型注释块时，特别有用：
 ```html
 <table>
     <!--/*/ <th:block th:each="user : ${users}"> /*/-->
