Update 13.3 Textual prototype-only comment blocks： adding code.md

--- a/I. Using Thymeleaf/13.3 Textual prototype-only comment blocks： adding code.md
+++ b/I. Using Thymeleaf/13.3 Textual prototype-only comment blocks： adding code.md
@@ -13,7 +13,7 @@ var msg  = "This is a working application";
 var f = function() {
     ...
 ```
-Will be executed as:
+将会当作以下内容执行：
 ```javascript
 var x = 23;
 
@@ -22,7 +22,7 @@ var msg  = "This is a working application";
 var f = function() {
 ...
 ```
-You can include expressions inside these comments, and they will be evaluated:
+你可以在这些注释里包含表达式。它们会被执行：
 ```javascript
 var x = 23;
 
