Update 13.4 Textual parser-level comment blocks：removing code.md

--- a/I. Using Thymeleaf/13.4 Textual parser-level comment blocks：removing code.md
+++ b/I. Using Thymeleaf/13.4 Textual parser-level comment blocks：removing code.md
@@ -1,6 +1,6 @@
 ### 13.4 文本解析器级别注释块：移除代码
 
-In a way similar to that of prototype-only comment blocks, all the three textual template modes (`TEXT`, `JAVASCRIPT` and `CSS`) make it possible to instruct Thymeleaf to remove code between special `/*[- */` and `/* -]*/` marks, like this:
+类似于原型注释块，三种文本模版模式（`TEXT`，`JAVASCRIPT`与`CSS`）都能够通知Thymeleaf移除特别的`/*[- */`和`/* -]*/`标记之间的代码，就像这样：
 ```javascript
 var x = 23;
 
