Update 13.4 Textual parser-level comment blocks：removing code.md

--- a/I. Using Thymeleaf/13.4 Textual parser-level comment blocks：removing code.md
+++ b/I. Using Thymeleaf/13.4 Textual parser-level comment blocks：removing code.md
@@ -13,7 +13,7 @@ var msg  = "This is shown only when executed statically!";
 var f = function() {
 ...
 ```
-Or this, in `TEXT` mode:
+或者这样，在`TEXT`模式：
 ```
 ...
 /*[- Note the user is obtained from the session, which must exist -]*/
