Update 13.5 Natural JavaScript and CSS templates.md

--- a/I. Using Thymeleaf/13.5 Natural JavaScript and CSS templates.md
+++ b/I. Using Thymeleaf/13.5 Natural JavaScript and CSS templates.md
@@ -1,24 +1,24 @@
 ### 13.5 自然JavaScript和CSS模版
 
-As seen in the previous chapter, JavaScript and CSS inlining offer the possibility to include inlined expressions inside JavaScript/CSS comments, like:
+就像在之前的章节看到的那样，JavaScript和CSS内联能够在JavaScript/CSS注释里包含内联表达式，就像：
 ```javascript
 ...
 var username = /*[[${session.user.name}]]*/ "Sebastian Lychee";
 ...
 ```
-…which is valid JavaScript, and once executed could look like:
+这是有效的JavaScript。一旦执行，就会是：
 ```javascript
 ...
 var username = "John Apricot";
 ...
 ```
-This same trick of enclosing inlined expressions inside comments can in fact be used for the entire textual mode syntax:
+在注释里封闭内联表达式的相同技巧实际上可以用于整个文本模式语法：
 ```javascript
   /*[# th:if="${user.admin}"]*/
      alert('Welcome admin');
   /*[/]*/
 ```
-That alert in the code above will be shown when the template is open statically – because it is 100% valid JavaScript –, and also when the template is run if the user is an admin. It is equivalent to:
+当静态地打开模板时，代码里的alert将会被展示。因为它是100%有效的JavaScript。当模板运行时，如果用户是admin，代码里的alert也会被展示。它等价于：
 ```javascript
   [# th:if="${user.admin}"]
      alert('Welcome admin');
