Update 13.5 Natural JavaScript and CSS templates.md

--- a/I. Using Thymeleaf/13.5 Natural JavaScript and CSS templates.md
+++ b/I. Using Thymeleaf/13.5 Natural JavaScript and CSS templates.md
@@ -24,8 +24,8 @@ var username = "John Apricot";
      alert('Welcome admin');
   [/]
 ```
-…which is actually the code to which the initial version is converted during template parsing.
+这实际上是初始版本在模板解析时转成的代码。
 
-Note however that wrapping elements in comments does not clean the lines they live in (to the right until a `;` is found) as inlined output expressions do. That behaviour is reserved for inlined output expressions only.
+注意：尽管在注释里包装的元素就像内联的输出表达式一样，没有结束所在行（一直到右边的`;`才算结束）。但是，这种行为只是为内联的输出表达式保留的。
 
-So Thymeleaf 3.0 allows the development of `complex JavaScript scripts and CSS style sheets in the form of natural templates`, valid both as a prototype and as a working template.
+Thymeleaf 3.0允许开发`自然模板形式的复杂JavaScript脚本和CSS样式表`。它们同时对原型和工作的模板有效。
