Update 14.1 Order List.md

--- a/I. Using Thymeleaf/14.1 Order List.md
+++ b/I. Using Thymeleaf/14.1 Order List.md
@@ -1,6 +1,6 @@
 ### 14.1 订单列表
 
-Let’s start by creating an order list page, `/WEB-INF/templates/order/list.html`：
+让我们从创建订单列表页面开始,`/WEB-INF/templates/order/list.html`：
 ```html
 <!DOCTYPE html>
 
@@ -43,7 +43,7 @@ Let’s start by creating an order list page, `/WEB-INF/templates/order/list.htm
   
 </html>
 ```
-There’s nothing here that should surprise us, except for this little bit of OGNL magic:
+上面的代码应该没有使我们惊讶的东西，除了这一点点OGNL魔法：
 ```html
 <td th:text="${#aggregates.sum(o.orderLines.{purchasePrice * amount})}">23.32</td>
 ```
