Update 14.1 Order List.md

--- a/I. Using Thymeleaf/14.1 Order List.md
+++ b/I. Using Thymeleaf/14.1 Order List.md
@@ -47,6 +47,6 @@
 ```html
 <td th:text="${#aggregates.sum(o.orderLines.{purchasePrice * amount})}">23.32</td>
 ```
-What that does is, for each order line (`OrderLine` object) in the order, multiply its `purchasePrice` and `amount` properties (by calling the corresponding `getPurchasePrice()` and `getAmount()` methods) and return the result into a list of numbers, later aggregated by the `#aggregates.sum(...)` function in order to obtain the order total price.
+对于订单里的每一个订单行（`OrderLine`对象），将它的`purchasePrice`和`amount`属性相乘（通过调用相应的`getPurchasePrice()`和`getAmount()`方法），并返回数字的列表，之后通过`#aggregates.sum(...)`函数合计总价。
 
-You’ve got to love the power of OGNL.
+你已经爱上了❤️OGNL。
