Update 15.1 Template Resolvers.md

--- a/I. Using Thymeleaf/15.1 Template Resolvers.md
+++ b/I. Using Thymeleaf/15.1 Template Resolvers.md
@@ -1,6 +1,6 @@
 ### 15.1 模板解析器
 
-For our Good Thymes Virtual Grocery, we chose an `ITemplateResolver` implementation called `ServletContextTemplateResolver` that allowed us to obtain templates as resources from the Servlet Context.
+我们为百里香虚拟杂货店选择了一个叫做`ServletContextTemplateResolver`的`ITemplateResolver`实现。that allowed us to obtain templates as resources from the Servlet Context.
 
 Besides giving us the ability to create our own template resolver by implementing `ITemplateResolver`, Thymeleaf includes four implementations out of the box:
 
