Update 15.1 Template Resolvers.md

--- a/I. Using Thymeleaf/15.1 Template Resolvers.md
+++ b/I. Using Thymeleaf/15.1 Template Resolvers.md
@@ -1,8 +1,8 @@
 ### 15.1 模板解析器
 
-我们为百里香虚拟杂货店选择了一个叫做`ServletContextTemplateResolver`的`ITemplateResolver`实现。that allowed us to obtain templates as resources from the Servlet Context.
+我们为百里香虚拟杂货店选择了一个叫做`ServletContextTemplateResolver`的`ITemplateResolver`实现。它允许我们像来自Servlet上下文的资源一样获取模版。
 
-Besides giving us the ability to create our own template resolver by implementing `ITemplateResolver`, Thymeleaf includes four implementations out of the box:
+除了让我们能够通过实现`ITemplateResolver`创建我们自己的模版解析器，Thymeleaf包含了四种立即可用的实现：
 
 - `org.thymeleaf.templateresolver.ClassLoaderTemplateResolver`, which resolves templates as classloader resources, like:
 ```java
