Update 15.1 Template Resolvers.md

--- a/I. Using Thymeleaf/15.1 Template Resolvers.md
+++ b/I. Using Thymeleaf/15.1 Template Resolvers.md
@@ -4,15 +4,15 @@
 
 除了让我们能够通过实现`ITemplateResolver`创建我们自己的模版解析器，Thymeleaf包含了四种立即可用的实现：
 
-- `org.thymeleaf.templateresolver.ClassLoaderTemplateResolver`, which resolves templates as classloader resources, like:
+- `org.thymeleaf.templateresolver.ClassLoaderTemplateResolver`，当作类加载器资源解析模版，就像：
 ```java
 return Thread.currentThread().getContextClassLoader().getResourceAsStream(template);
 ```
-- `org.thymeleaf.templateresolver.FileTemplateResolver`, which resolves templates as files from the file system, like:
+- `org.thymeleaf.templateresolver.FileTemplateResolver`，当作来自文件系统的文件解析模版，就像：
 ```java
 return new FileInputStream(new File(template));
 ```
-- `org.thymeleaf.templateresolver.UrlTemplateResolver`, which resolves templates as URLs (even non-local ones), like:
+- `org.thymeleaf.templateresolver.UrlTemplateResolver`，当作URLs（甚至非本地的URL）解析模版，就像：
 ```java
 return (new URL(template)).openStream();
 ```
