Update 15.1 Template Resolvers.md

--- a/I. Using Thymeleaf/15.1 Template Resolvers.md
+++ b/I. Using Thymeleaf/15.1 Template Resolvers.md
@@ -12,22 +12,22 @@ return Thread.currentThread().getContextClassLoader().getResourceAsStream(templa
 ```java
 return new FileInputStream(new File(template));
 ```
-- `org.thymeleaf.templateresolver.UrlTemplateResolver`，当作URLs（甚至非本地的URL）解析模版，就像：
+- `org.thymeleaf.templateresolver.UrlTemplateResolver`，当作URL（甚至非本地的URL）解析模版，就像：
 ```java
 return (new URL(template)).openStream();
 ```
-- `org.thymeleaf.templateresolver.StringTemplateResolver`, which resolves templates directly as the `String` being specified as `template` (or template name, which in this case is obviously much more than a mere name):
+- `org.thymeleaf.templateresolver.StringTemplateResolver`，当作`String` （以`template`指定，或者是模版名）解析模版：
 ```java
 return new StringReader(templateName);
 ```
-All of the pre-bundled implementations of `ITemplateResolver` allow the same set of configuration parameters, which include:
+`ITemplateResolver`的所有预绑定的实现允许相同的一组配置参数。它包括：
 
-- Prefix and suffix (as already seen):
+- 前缀和后缀（和已经看到的一样）：
 ```java
 templateResolver.setPrefix("/WEB-INF/templates/");
 templateResolver.setSuffix(".html");
 ```
-- Template aliases that allow the use of template names that do not directly correspond to file names. If both suffix/prefix and alias exist, alias will be applied before prefix/suffix:
+- 模版别名。他允许使用不直接等于文件名的模版名字。如果前缀/后缀和别名同时存在，别名会在前缀/后缀之前被应用：
 ```java
 templateResolver.addTemplateAlias("adminHome","profiles/admin/home");
 templateResolver.setTemplateAliases(aliasesMap);
