Update 15.1 Template Resolvers.md

--- a/I. Using Thymeleaf/15.1 Template Resolvers.md
+++ b/I. Using Thymeleaf/15.1 Template Resolvers.md
@@ -32,26 +32,26 @@ templateResolver.setSuffix(".html");
 templateResolver.addTemplateAlias("adminHome","profiles/admin/home");
 templateResolver.setTemplateAliases(aliasesMap);
 ```
-- Encoding to be applied when reading templates:
+- 读取模板时的编码：
 ```java
 templateResolver.setEncoding("UTF-8");
 ```
-- Template mode to be used:
+- 使用的模板模式：
 ```java
 // Default is HTML
 templateResolver.setTemplateMode("XML");
 ```
-- Default mode for template cache, and patterns for defining whether specific templates are cacheable or not:
+- 模板缓存的默认模式，以及定义指定模板是否可缓存的模式：
 ```java
 // Default is true
 templateResolver.setCacheable(false);
 templateResolver.getCacheablePatternSpec().addPattern("/users/*");
 ```
-- TTL in milliseconds for parsed template cache entries originated in this template resolver. If not set, the only way to remove an entry from the cache will be to exceed the cache max size (oldest entry will be removed).
+- 由这个模板解析器产生的模板缓存入口的存活时间（毫秒计）。如果没有设置，从缓存里移除一个入口的唯一方式将会是超过最大缓存量（最老的入口会被移除）。
 ```java
 // Default is no TTL (only cache size exceeded would remove entries)
 templateResolver.setCacheTTLMs(60000L);
 ```
 ```
-The Thymeleaf + Spring integration packages offer a `SpringResourceTemplateResolver` implementation which uses all the Spring infrastructure for accessing and reading resources in applications, and which is the recommended implementation in Spring-enabled applications.
+Thymeleaf + Spring integration packages offer a `SpringResourceTemplateResolver` implementation which uses all the Spring infrastructure for accessing and reading resources in applications, and which is the recommended implementation in Spring-enabled applications.
 ```
