Update 15.1 Template Resolvers.md

--- a/I. Using Thymeleaf/15.1 Template Resolvers.md
+++ b/I. Using Thymeleaf/15.1 Template Resolvers.md
@@ -53,5 +53,5 @@ templateResolver.getCacheablePatternSpec().addPattern("/users/*");
 templateResolver.setCacheTTLMs(60000L);
 ```
 ```
-Thymeleaf + Spring integration packages offer a `SpringResourceTemplateResolver` implementation which uses all the Spring infrastructure for accessing and reading resources in applications, and which is the recommended implementation in Spring-enabled applications.
+lThymeleaf + Spring整合包提供了一个`SpringResourceTemplateResolver`实现。它使用所有的Spring基础设施来访问和读取应用里的资源，是Spring应用里推荐的实现。
 ```
