翻译15.2 信息解析器

--- a/I. Using Thymeleaf/15.2 Message Resolvers.md
+++ b/I. Using Thymeleaf/15.2 Message Resolvers.md
@@ -1,9 +1,7 @@
 ### 15.2 信息解析器
 
-We did not explicitly specify a Message Resolver implementation for our Grocery application, and as it was explained before, this meant that the implementation being used was an `org.thymeleaf.messageresolver.StandardMessageResolver` object.
+我们并没有为杂货店应用明确地指定一个信息解析器。就和之前解释过的一样，这意味着我们正在使用`org.thymeleaf.messageresolver.StandardMessageResolver`对象。
 
-`StandardMessageResolver` is the standard implementation of the `IMessageResolver` interface, but we could create our own if we wanted, adapted to the specific needs of our application.
+`StandardMessageResolver`是对`IMessageResolver`接口的标准实现。但是为了适应我们的应用的特定需求，我们可以创建自己的实现。
 
-```
-The Thymeleaf + Spring integration packages offer by default an `IMessageResolver` implementation which uses the standard Spring way of retrieving externalized messages, by using `MessageSource` beans declared at the Spring Application Context.
-```
+**注** Thymeleaf + Spring整合包默认提供了一个`IMessageResolver`实现。它通过声明在Spring应用上下文的`MessageSource` bean，以标准的Spring方式取得外部信息。
