Update 15.3 Conversion Services.md

--- a/I. Using Thymeleaf/15.3 Conversion Services.md
+++ b/I. Using Thymeleaf/15.3 Conversion Services.md
@@ -1,8 +1,8 @@
 ### 15.3 转换服务
 
-The conversion service that enables us to perform data conversion and formatting operations by means of the double-brace syntax (`${{...}}`) is actually a feature of the Standard Dialect, not of the Thymeleaf Template Engine itself.
+通过双大括号语法（`${{...}}`），转换服务使我们能够执行数据转换和格式化操作。它实际上是标准方言而非Thymeleaf模板引擎自身的一种特性。
 
-As such, the way to configure it is by setting our custom implementation of the `IStandardConversionService` interface directly into the instance of `StandardDialect` that is being configured into the template engine. Like:
+配置的方法是直接往`StandardDialect`实例里设置我们自定义的`IStandardConversionService`接口的实现。就像：
 ```java
 IStandardConversionService customConversionService = ...
 
@@ -11,4 +11,4 @@ dialect.setConversionService(customConversionService);
 
 templateEngine.setDialect(dialect);
 ```
-**注** Note that the thymeleaf-spring3 and thymeleaf-spring4 packages contain the `SpringStandardDialect`, and this dialect already comes pre-configured with an implementation of `IStandardConversionService` that integrates Spring’s own Conversion Service infrastructure into Thymeleaf.
+**注** thymeleaf-spring3和thymeleaf-spring4包包含`SpringStandardDialect`。此方言已经预配置了一个`IStandardConversionService`的实现。它往Thymeleaf里整合了Spring自己的转换服务基础设施。
