--- a/I. Using Thymeleaf/15.4 Logging.md
+++ b/I. Using Thymeleaf/15.4 Logging.md
@@ -1,10 +1,10 @@
 ### 15.4 日志记录
 
-Thymeleaf pays quite a lot of attention to logging, and always tries to offer the maximum amount of useful information through its logging interface.
+Thymeleaf十分关注日志记录，一直尝试通过日志记录接口提供最多的有用信息。
 
-The logging library used is `slf4j`, which in fact acts as a bridge to whichever logging implementation we might want to use in our application (for example, `log4j`).
+使用的日志记录库是`slf4j`。它实际上扮演了一座桥梁————在我们的应用里，我们可能想要使用的日志记录接口（比如，`log4j`）。
 
-Thymeleaf classes will log `TRACE`, `DEBUG` and `INFO`-level information, depending on the level of detail we desire, and besides general logging it will use three special loggers associated with the TemplateEngine class which we can configure separately for different purposes:
+根据我们想要的细节的等级，Thymeleaf类将记录`TRACE`，`DEBUG`和`INFO`等级的信息。除了通用的日志记录，它将使用三个与TemplateEngine类有关的特殊的日志记录器。我们可以为了不同的目的，分别配置它们：
 
 - `org.thymeleaf.TemplateEngine.CONFIG` will output detailed configuration of the library during initialization.
 - `org.thymeleaf.TemplateEngine.TIMER` will output information about the amount of time taken to process each template (useful for benchmarking!)
