翻译17.1 解耦的逻辑：概念

--- a/I. Using Thymeleaf/17.1 Decoupled logic: The concept.md
+++ b/I. Using Thymeleaf/17.1 Decoupled logic: The concept.md
@@ -1,8 +1,8 @@
 ### 17.1 解耦的逻辑：概念
 
-So far we have worked for our Grocery Store with templates done the usual way, with logic being inserted into our templates in the form of attributes.
+到目前为止，我们都用通常的模版来构建我们的杂货店——以属性的形式将逻辑插入我们的模版。
 
-But Thymeleaf also allows us to completely decouple the template markup from its logic, allowing the creation of `completely logic-less markup templates` in the `HTML` and `XML` template modes.
+但是，Thymeleaf也允许我们从它的模版标记中完全解耦逻辑，允许在`HTML`和`XML`模版模式下创建`完全无逻辑的标记模版`。
 
 The main idea is that template logic will be defined in a separate logic file (more exactly a logic resource, as it doesn’t need to be a file). By default, that logic resource will be an additional file living in the same place ( e.g. folder) as the template file, with the same name but with `.th.xml` extension:
 ```
