Update 17.1 Decoupled logic: The concept.md

--- a/I. Using Thymeleaf/17.1 Decoupled logic: The concept.md
+++ b/I. Using Thymeleaf/17.1 Decoupled logic: The concept.md
@@ -4,7 +4,7 @@
 
 但是，Thymeleaf也允许我们从它的模版标记中完全解耦逻辑，允许在`HTML`和`XML`模版模式下创建`完全无逻辑的标记模版`。
 
-The main idea is that template logic will be defined in a separate logic file (more exactly a logic resource, as it doesn’t need to be a file). By default, that logic resource will be an additional file living in the same place ( e.g. folder) as the template file, with the same name but with `.th.xml` extension:
+大意就是将模版逻辑定义在一个分开的逻辑文件里（更准确地说，是一个逻辑资源，因为可以不是一个文件）。默认地，逻辑资源是一个额外的文件，和模版文件在同一个地方（比如，文件夹）。它们名字相同，但是逻辑资源文件的扩展名是`.th.xml`：
 ```
 /templates
 +->/home.html
