Update 17.1 Decoupled logic: The concept.md

--- a/I. Using Thymeleaf/17.1 Decoupled logic: The concept.md
+++ b/I. Using Thymeleaf/17.1 Decoupled logic: The concept.md
@@ -10,7 +10,7 @@
 +->/home.html
 +->/home.th.xml
 ```
-So the `home.html` file can be completely logic-less. It might look like this:
+因此，`home.html`文件可以是完全无逻辑的。看起来就像这样：
 ```html
 <!DOCTYPE html>
 <html>
