Update 17.1 Decoupled logic: The concept.md

--- a/I. Using Thymeleaf/17.1 Decoupled logic: The concept.md
+++ b/I. Using Thymeleaf/17.1 Decoupled logic: The concept.md
@@ -28,9 +28,9 @@
   </body>
 </html>
 ```
-Absolutely no Thymeleaf code there. This is a template file that a designer with no Thymeleaf or templating knowledge could have created, edited and/or understood. Or a fragment of HTML provided by some external system with no Thymeleaf hooks at all.
+没有任何的Thymeleaf代码。这是一个连没有Thymeleaf或者模板知识的设计者也可以创建、编辑、理解的模板文件。或者，这是一段由某些外部系统提供的没有一点儿Thymeleaf挂钩的HTML。
 
-Let’s now turn that `home.html` template into a Thymeleaf template by creating our additional `home.th.xml` file like this:
+现在，让我们通过创建额外的`home.th.xml`文件，把那个`home.html`模板转变为Thymeleaf模板。就像这样：
 ```xml
 <?xml version="1.0"?>
 <thlogic>
