Update 17.1 Decoupled logic: The concept.md

--- a/I. Using Thymeleaf/17.1 Decoupled logic: The concept.md
+++ b/I. Using Thymeleaf/17.1 Decoupled logic: The concept.md
@@ -42,11 +42,11 @@
   </attr>
 </thlogic>
 ```
-Here we can see a lot of `<attr>` tags inside a `thlogic` block. Those `<attr>` tags perform attribute injection on nodes of the original template selected by means of their `sel` attributes, which contain Thymeleaf markup selectors (actually AttoParser markup selectors).
+我们可以在`thlogic`块里面看到许多的`<attr>`标签。那些`<attr>`标签在由`sel`属性指定的原始模板的节点上执行属性注入。它们包含Thymeleaf标记选择器（实际上是AttoParser标记选择器）。
 
-Also note that `<attr>` tags can be nested so that their selectors are appended. That `sel="/tr[0]"` above, for example, will be processed as `sel="#usersTable/tr[0]"`. And the selector for the user name `<td>` will be processed as `sel="#usersTable/tr[0]//td.username"`.
+也请注意：`<attr>`标签可以内嵌，这样它们的选择器可以扩展。比如，上面的`sel="/tr[0]"`，会被当做`sel="#usersTable/tr[0]"`处理。用于用户名`<td>`的选择器会被当做`sel="#usersTable/tr[0]//td.username"`处理。
 
-So once merged, both files seen above will be the same as:
+因此，一旦合并，上面看到的两个文件会等同于：
 ```html
 <!DOCTYPE html>
 <html>
