Update 17.1 Decoupled logic: The concept.md

--- a/I. Using Thymeleaf/17.1 Decoupled logic: The concept.md
+++ b/I. Using Thymeleaf/17.1 Decoupled logic: The concept.md
@@ -64,6 +64,6 @@
   </body>
 </html>
 ```
-This looks more familiar, and is indeed less verbose than creating two separate files. But the advantage of decoupled templates is that we can give for our templates total independence from Thymeleaf, and therefore better maintainability from the design standpoint.
+这看起来更为熟悉，比起创建两个独立的文件，也确实更加简单。但是，解耦的模板的优势在于我们能够给予模板完全的自由。因此，从设计的观点来看，有更好的可维护性。
 
-Of course some contracts between designers or developers will still be needed – e.g. the fact that the users `<table>` will need an `id="usersTable"` –, but in many scenarios a pure-HTML template will be a much better communication artifact between design and development teams.
+当然，设计者和开发人员之间还是需要某些协议。比如，用户`<table>`需要一个`id="usersTable"`。但是，在许多的场景下，纯HTML模板更易于设计团队与开发团队之间的交流。
