Update 17.3 The th:ref attribute.md

--- a/I. Using Thymeleaf/17.3 The th:ref attribute.md
+++ b/I. Using Thymeleaf/17.3 The th:ref attribute.md
@@ -1,16 +1,16 @@
 ### 17.3 th:ref属性
 
-`th:ref` is only a marker attribute. It does nothing from the processing standpoint and simply disappears when the template is processed, but its usefulness lies in the fact that it acts as a markup reference, i.e. it can be resolved by name from a markup selector just like a tag name or a fragment (`th:fragment`).
+`th:ref`仅仅是一个标记属性。从处理的角度来看，它什么也没有做，只是在模板被处理时消失了而已。但是，它的用处体现在它会像标记引用一样工作。比如，它可以通过标记选择器的名字解析，就像一个标签名字或一段标记（`th:fragment`）。
 
-So if we have a selector like:
+如果我们有如下的选择器：
 ```html
   <attr sel="whatever" .../>
 ```
-This will match:
+这会匹配：
 
-- Any `<whatever>` tags.
-- Any tags with a `th:fragment="whatever"` attribute.
-- Any tags with a `th:ref="whatever"` attribute.
+- 任何`<whatever>`标签
+- 任何带`th:fragment="whatever"`属性的标签
+- 任何带`th:ref="whatever"`属性的标签
 
 What is the advantage of `th:ref` against, for example, using a pure-HTML `id` attribute? Merely the fact that we might not want to add so many `id` and `class` attributes to our tags to act as logic anchors, which might end up polluting our output.
 
