Update 17.3 The th:ref attribute.md

--- a/I. Using Thymeleaf/17.3 The th:ref attribute.md
+++ b/I. Using Thymeleaf/17.3 The th:ref attribute.md
@@ -12,8 +12,8 @@
 - 任何带`th:fragment="whatever"`属性的标签
 - 任何带`th:ref="whatever"`属性的标签
 
-What is the advantage of `th:ref` against, for example, using a pure-HTML `id` attribute? Merely the fact that we might not want to add so many `id` and `class` attributes to our tags to act as logic anchors, which might end up polluting our output.
+`th:ref`的优势是什么呢？比如，使用纯HTML的`id`属性？我们可能是仅仅不想往标签里加这么多`id`和`class`属性作为逻辑锚，来污染我们的输出。
 
-And in the same sense, what is the disadvantage of `th:ref`? Well, obviously that we’d be adding a bit of Thymeleaf logic (“logic”) to our templates.
+在同样意义上，`th:ref`的劣势是什么呢？显而易见，我们得往我们的模板里添加点Thymeleaf逻辑。
 
-Note this applicability of the `th:ref` attribute `does not only apply to decoupled logic template files`: it works the same in other types of scenarios, like in fragment expressions (`~{...}`).
+注意，`th:ref`属性`不仅仅可以用于解耦的逻辑模板文件`：它在其它场景下同样有效，比如片段表达式（`~{...}`）。
