--- a/I. Using Thymeleaf/17.5 Resolution of decoupled logic.md
+++ b/I. Using Thymeleaf/17.5 Resolution of decoupled logic.md
@@ -1,12 +1,13 @@
 ### 17.5 解耦的逻辑的解析
 
-The way Thymeleaf resolves the decoupled logic resources corresponding to each template is configurable by the user. It is determined by an extension point, the `org.thymeleaf.templateparser.markup.decoupled.IDecoupledTemplateLogicResolver`, for which a default implementation is provided: `StandardDecoupledTemplateLogicResolver`.
+Thymeleaf解析解耦的逻辑资源的方式由用户配置。 它取决于扩展点——`org.thymeleaf.templateparser.markup.decoupled.IDecoupledTemplateLogicResolver`。还有一个默认的实现：`StandardDecoupledTemplateLogicResolver`。
 
-What does this standard implementation do?
+这个标准的实现做了什么呢？
 
-- First, it applies a `prefix` and a `suffix` to the base name of the template resource (obtained by means of its `ITemplateResource#getBaseName()` method). Both prefix and suffix can be configured and, by default, the prefix will be empty and the suffix will be `.th.xml`.
-- Second, it asks the template resource to resolve a relative resource with the computed name by means of its `ITemplateResource#relative(String relativeLocation)` method.
-The specific implementation of `IDecoupledTemplateLogicResolver` to be used can be configured at the `TemplateEngine` easily:
+- 首先，它对模板资源的基本名称应用`前缀`和`后缀`（通过`ITemplateResource#getBaseName()`方法）。前缀和后缀都可以配置。默认的，前缀将会为空，而后缀会是`.th.xml`。
+- 其次，它通过`ITemplateResource#relative(String relativeLocation)`方法，用计算出的名称，请求模版资源解析相对的资源。
+
+`IDecoupledTemplateLogicResolver`的特定实现可以很容易地在`TemplateEngine`里配置：
 ```java
 final StandardDecoupledTemplateLogicResolver decoupledresolver = 
         new StandardDecoupledTemplateLogicResolver();
